Fixed spacing on back link in assign

--- a/app/assets/stylesheets/controller/clients.css.scss
+++ b/app/assets/stylesheets/controller/clients.css.scss
@@ -72,6 +72,7 @@ font-size: 1.2em;
 .clients .panel-primary{
   margin-top: 2em !important;
   border-color: black;
+  margin-bottom: 1em !important;
 }
  .show .panel-primary{
   margin-top: 5em !important;
